- Add support for Groovy scripts - Document an example of Groovy script usage - Add support for loading request bodies, response bodies and scripts from the filesystem - Note further TODOs